--- a/snake.html
+++ b/snake.html
@@ -29,16 +29,25 @@
                 </div>
 
                 <div class='control__buttons'>
-                    <button class='uplerido' id='up'>Up</button>
+                    <button class='uplerido' id='up'>
+                        <div class='flecha__direccion arriba' id='up2'></div>
+                    </button>
                 </div>
                 
                 <div class='control__buttons'>
-                    <button class='uplerido' id='le'>Le</button>
-                    <button class='uplerido' id='ri'>Ri</button>
+                    <button class='uplerido' id='le'>
+                        <div class='flecha__direccion izquierda' id='le2'></div>
+                    </button>
+
+                    <button class='uplerido' id='ri'>
+                        <div class='flecha__direccion derecha' id='ri2'></div>
+                    </button>
                 </div>
 
                 <div class='control__buttons'>
-                    <button class='uplerido' id='do'>Do</button>
+                    <button class='uplerido' id='do'>
+                        <div class='flecha__direccion abajo' id='do2'></div>
+                    </button>
                 </div>
 
             </div>
