--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Snake</title>
 
         <link rel="stylesheet" type="text/css" href="snakeStyle.css">
-        <script src="snakeJs.js" defer></script>
+        <script type="module" src="./js/main.js" defer></script>
     </head>
 
     <body>
