Cambio en el nombre de un archivo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que el diseño sea responsivo en dispositivos móviles -->
         <title>Snake</title> <!-- Título de la pestaña del navegador -->
 
-        <link rel="stylesheet" type="text/css" href="snakeStyle.css"> <!-- Enlaza la hoja de estilos externa para el diseño -->
+        <link rel="stylesheet" type="text/css" href="style.css"> <!-- Enlaza la hoja de estilos externa para el diseño -->
         <script src="main.js" defer></script> <!-- Carga el script de JavaScript de forma diferida para no bloquear la carga del HTML -->
 
     </head>
