Cambio en el setInterval

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> <!-- Declara el tipo de documento y el idioma de la página como inglés -->
     <head>
         <meta charset="UTF-8"> <!-- Define la codificación de caracteres como UTF-8 (para soportar caracteres especiales) -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que el diseño sea responsivo en dispositivos móviles -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que la página sea responsiva ajustando el ancho al dispositivo del usuario -->
         <title>Snake</title> <!-- Título de la pestaña del navegador -->
 
         <link rel="stylesheet" type="text/css" href="style.css"> <!-- Enlaza la hoja de estilos externa para el diseño -->
@@ -17,7 +17,7 @@
 
                 <!-- Sección que muestra el puntaje del jugador -->
                 <div class='score__board'>
-                    <div class='score__board ptos' id='ptos'>Puntos: 0</div> <!-- Contenedor que muestra los puntos actuales -->
+                    <div class='score__board ptos' id='ptos'>Asegurate de obtener un buen puntaje</div> <!-- Contenedor que muestra los puntos actuales -->
                 </div>
 
                 <!-- Área de juego donde se moverá la serpiente -->
